# CMakeList.txt : CMake project for myDisassembler, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("myDisassembler")

# Add source to this project's executable.
add_executable (myDisassembler "myDisassembler.cpp" "myDisassembler.h")

# TODO: Add tests and install targets if needed.
